modified index with new info

--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-Hello World
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<html> <head>
+<title>Eliana M. Duarte </title>
+</head>
+
+<body  text="#000000" link="#990000" vlink="#CC0099"
+alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
+<font size="5" color="maroon">
+<h1 align="center">Eliana  Duarte
+ </h1>
+</font>
+<hr size="4" noshade>
+<!--
+<img src="elianaFramesize.jpg" alt="Test Image" align="right" style="width:304px;height:228px;"/>
+-->
+<font size="4">
+<p> I am a sixth year graduate student in the Mathematics Department
+at the University of Illinois Urbana-Champaign. My advisor is
+<a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>. I defended my thesis
+in February and will be visiting <a href= "https://www.mis.mpg.de/nlalg/members.html ">
+Max Planck Institute for Mathematics in the
+Sciences</a> for the rest of the Spring 2017 semester.
+</p>
+</font>
+
+
+<h2>Contact Information </h2> 
+<p>
+<u>Email</u>: emduart2 AT illinois DOT edu <br>
+<u>Office</u>: B4 Coble Hall <br>
+ <a href= "DuarteCV.pdf"> Resume(CV).
+</a>
+<hr size="4" noshade>
+</p>
+<font size="5" color="navy">
+ &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp <b>
+  <a href= "research.html">Research. </a></b> &nbsp &nbsp &nbsp
+<b><a href= "teaching.html">Teaching. </a> </b> &nbsp &nbsp &nbsp
+<b><a href= "miscellaneous.html">Miscellaneous. </a> </b>
+</font>
+<!--
+
+
+
+<h3> Miscellaneous </h3>
+<p>I am currently the president of the 
+<a href= " https://faculty.math.illinois.edu/awm/">Association for Women in Mathematics </a>
+ chapter at the University of Illinois Urbana-Champaign. </p>
+Here is a link to my webpage on <a href= "http://emduart2.github.io/framework-rigidity/"> Rigidity of 
+frameworks </a>. <br>
+<!--a href= "https://github.com/emduart2"> My github profile </a-->
+<hr size="4" noshade>
+
+</body> </html>
