changed contact info

--- a/index.html
+++ b/index.html
@@ -14,20 +14,16 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
 <img src="elianaFramesize.jpg" alt="Test Image" align="right" style="width:304px;height:228px;"/>
 -->
 <font size="4">
-<p> I am a sixth year graduate student in the Mathematics Department
-at the University of Illinois Urbana-Champaign. My advisor is
-<a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>. I defended my thesis
-in February and will be visiting <a href= "https://www.mis.mpg.de/nlalg/members.html ">
-Max Planck Institute for Mathematics in the
-Sciences</a> for the rest of the Spring 2017 semester.
+  <p> I am a postdoctoral reasearcher at Max Planck Institute for Mathematics in the Sciences in Leipzig,
+    Germany. In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
+<a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>.
 </p>
 </font>
 
 
 <h2>Contact Information </h2> 
 <p>
-<u>Email</u>: emduart2 AT illinois DOT edu <br>
-<u>Office</u>: B4 Coble Hall <br>
+<u>Email</u>: duarte AT mis DOT mpg DOT edu <br>
  <a href= "DuarteCV.pdf"> Resume(CV).
 </a>
 <hr size="4" noshade>
