--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
  </h1>
 </font>
 <hr size="4" noshade>
-<!--
-<img src="elianaFramesize.jpg" alt="Test Image" align="right" style="width:304px;height:228px;"/>
--->
+
+<img src="elianaProfile.jpg" alt="Test Image" align="right" style="width:304px;height:228px;"/>
+
 <font size="4">
   <p> I am a postdoctoral reasearcher at Max Planck Institute for Mathematics in the Sciences in Leipzig,
     Germany. In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
