--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
 </font>
 <hr size="4" noshade>
 
-<img src="elianaProfile.jpg" alt="Test Image" align="right" style="width:304px;height:228px;"/>
+<img src="elianaProfile.JPG" alt="Test Image" align="right" style="width:304px;height:228px;"/>
 
 <font size="4">
   <p> I am a postdoctoral reasearcher at Max Planck Institute for Mathematics in the Sciences in Leipzig,
