--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
 <font size="4">
   <p> I am a postdoctoral reasearcher at Max Planck Institute for Mathematics in the Sciences in Leipzig,
     Germany. In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
-<a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>.
+<a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>. I like to work on
+problems related to Commutative Algebra, Algebraic Statistics and rigidity of rod and pinion
+2D and 3D frameworks.
 </p>
 </font>
 
