--- a/index.html
+++ b/index.html
@@ -10,43 +10,48 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
  </h1>
 </font>
 <hr size="4" noshade>
+<div>
 
-<img src="elianaProfile.JPG" alt="Test Image" align="right" style="width:304px;height:228px;"/>
 
 <font size="4">
-  <p> I am a postdoctoral reasearcher at Max Planck Institute for Mathematics in the Sciences in Leipzig,
+
+  <p align = "left" > <img src="elianaProfile.JPG" alt="Profile" align="right" style="width:304px;height:228px;"/> 
+  <br>
+<br>
+  I am a postdoctoral reasearcher at Max Planck Institute for Mathematics in the Sciences in Leipzig,
     Germany. In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
 <a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>. I like to work on
 problems related to Commutative Algebra, Algebraic Statistics and rigidity of rod and pinion
-2D and 3D frameworks.
+2D and 3D frameworks. 
 </p>
 </font>
 
 
-<h2>Contact Information </h2> 
-<p>
 <u>Email</u>: duarte AT mis DOT mpg DOT edu <br>
  <a href= "DuarteCV.pdf"> Resume(CV).
 </a>
-<hr size="4" noshade>
-</p>
+</div>
+
+<br>
+<br>
+<br>
+
+
+
+  <div id = "menu" align = "middle" >
+  <hr size="4" noshade>
 <font size="5" color="navy">
  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp <b>
   <a href= "research.html">Research. </a></b> &nbsp &nbsp &nbsp
 <b><a href= "teaching.html">Teaching. </a> </b> &nbsp &nbsp &nbsp
-<b><a href= "miscellaneous.html">Miscellaneous. </a> </b>
+<b><a href= "miscellaneous.html">Miscellaneous. </a> </b>&nbsp &nbsp &nbsp
+<b><a href= "https://github.com/emduart2"> My github profile </a> </b>
 </font>
-<!--
+</div>
 
 
 
-<h3> Miscellaneous </h3>
-<p>I am currently the president of the 
-<a href= " https://faculty.math.illinois.edu/awm/">Association for Women in Mathematics </a>
- chapter at the University of Illinois Urbana-Champaign. </p>
-Here is a link to my webpage on <a href= "http://emduart2.github.io/framework-rigidity/"> Rigidity of 
-frameworks </a>. <br>
-<!--a href= "https://github.com/emduart2"> My github profile </a-->
+
 <hr size="4" noshade>
 
 </body> </html>
