added extra links research,teaching, misc

--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -10,31 +10,10 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
  </h1>
 </font>
 <hr size="4" noshade>
-<div>
+<h2 align="center"> Miscellaneous </h2> 
 
 
-<font size="4">
 
-  <p align = "left" > <img src="elianaProfile.JPG" alt="Profile" align="right" style="width:304px;height:228px;"/> 
-  <br>
-<br>
-  I am a postdoctoral reasearcher at Max Planck Institute for Mathematics in the Sciences in Leipzig,
-    Germany. In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
-<a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>. I like to work on
-problems related to Commutative Algebra, Algebraic Statistics and rigidity of rod and pinion
-2D and 3D frameworks. 
-</p>
-</font>
-
-
-<u>Email</u>: duarte AT mis DOT mpg DOT edu <br>
- <a href= "DuarteCV.pdf"> Resume(CV).
-</a>
-</div>
-
-<br>
-<br>
-<br>
 
 
 
@@ -48,10 +27,6 @@ problems related to Commutative Algebra, Algebraic Statistics and rigidity of ro
 <b><a href= "https://github.com/emduart2"> My github profile </a> </b>
 </font>
 </div>
-
-
-
-
 <hr size="4" noshade>
 
 </body> </html>
