--- a/research.html
+++ b/research.html
@@ -10,31 +10,23 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
  </h1>
 </font>
 <hr size="4" noshade>
+<h2 align="center"> Publications </h2> 
 <div>
-
-
 <font size="4">
-
-  <p align = "left" > <img src="elianaProfile.JPG" alt="Profile" align="right" style="width:304px;height:228px;"/> 
-  <br>
-<br>
-  I am a postdoctoral reasearcher at Max Planck Institute for Mathematics in the Sciences in Leipzig,
-    Germany. In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
-<a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>. I like to work on
-problems related to Commutative Algebra, Algebraic Statistics and rigidity of rod and pinion
-2D and 3D frameworks. 
-</p>
+<ul>
+         <li>E. Duarte. Implicitization of tensor product surfaces in the presence of a generic set
+of basepoints. Journal of Algebra and Its Applications (2016): 1750189.</li>
+         <li>E. Duarte, and D. Lichtblau. Polynomial GCDs by Syzygies. Symbolic and Numeric Algorithms for Scientific Computing (SYNASC), 2016 18th International Symposium on. IEEE, 2016.
+</li>
+         <li>E. Duarte and H. Schenck Tensor Product Surfaces and linear syzygies, Proceedings of the American Mathematical Society 144.1 (2016): 65-72.
+</li>
+         <li>E. Duarte and G. Francis Stability of quasicrystal frameworks in 2D and 3D, in Felix Escrig and Jose Sanches (eds), Proceedings of the First Conference Transformables, Seville, Spain, 2013.
+</li>
+      </ul>
 </font>
-
-
-<u>Email</u>: duarte AT mis DOT mpg DOT edu <br>
- <a href= "DuarteCV.pdf"> Resume(CV).
-</a>
 </div>
 
-<br>
-<br>
-<br>
+
 
 
 
@@ -48,10 +40,6 @@ problems related to Commutative Algebra, Algebraic Statistics and rigidity of ro
 <b><a href= "https://github.com/emduart2"> My github profile </a> </b>
 </font>
 </div>
-
-
-
-
 <hr size="4" noshade>
 
 </body> </html>
