--- a/teaching.html
+++ b/teaching.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
-<title>Eliana M. Duarte </title>
+<title> Eliana Duarte </title>
 </head>
 
 <body  text="#000000" link="#990000" vlink="#CC0099"
@@ -10,31 +10,24 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
  </h1>
 </font>
 <hr size="4" noshade>
-<div>
-
-
 <font size="4">
+<div>
+<h2 align="center"> Teaching </h2>
+During my graduate studies at University of Illinois Urbana - Champaign I was a
+teaching assistant for the following classes: 
+<ul>
+         <li>Theory of arithmetic for elementary school teachers</li>
+         <li> Differential Calculus
+</li>
+         <li>Integral Calculus
+</li>
+         <li> Calculus in several variables
+</li>
+      </ul>
 
-  <p align = "left" > <img src="elianaProfile.JPG" alt="Profile" align="right" style="width:304px;height:228px;"/> 
-  <br>
-<br>
-  I am a postdoctoral reasearcher at Max Planck Institute for Mathematics in the Sciences in Leipzig,
-    Germany. In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
-<a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>. I like to work on
-problems related to Commutative Algebra, Algebraic Statistics and rigidity of rod and pinion
-2D and 3D frameworks. 
-</p>
+</div>
 </font>
 
-
-<u>Email</u>: duarte AT mis DOT mpg DOT edu <br>
- <a href= "DuarteCV.pdf"> Resume(CV).
-</a>
-</div>
-
-<br>
-<br>
-<br>
 
 
 
@@ -48,10 +41,6 @@ problems related to Commutative Algebra, Algebraic Statistics and rigidity of ro
 <b><a href= "https://github.com/emduart2"> My github profile </a> </b>
 </font>
 </div>
-
-
-
-
 <hr size="4" noshade>
 
 </body> </html>
