added conferences section

--- a/research.html
+++ b/research.html
@@ -26,7 +26,20 @@ of basepoints. Journal of Algebra and Its Applications (2016): 1750189.</li>
 </font>
 </div>
 
-
+<hr size="4" noshade>
+<h2 align="center"> Conferences </h2> 
+<div>
+<font size="4">
+<ul>
+         <li><a href="https://www.mis.mpg.de/calendar/conferences/2018/macaulay.html"> Macaulay 2 Workshop </a> </li>
+         <li><a href="https://www.math-conf.uni-osnabrueck.de/algebraic-methods-in-statistics/"> Algebraic 
+         methods in statistics. Universitat Osnabruck. </a></li>
+         <li><a href="https://www.mimuw.edu.pl/~marysia/Lukecin17.html"> Binomial Ideals. Lukecin, Poland.</a> </li>
+         <li><a href="https://www.siam.org/meetings/ag17/"> SIAM conference on Applied Algebraic Geometry </a></li>
+         <li><a href="https://www.mis.mpg.de/calendar/conferences/2017/rag.html"> Reading group on Real Algebraic Geometry</a> </li>
+      </ul>
+</font>
+</div>
 
 
 
