added link to cv

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ problems related to Commutative Algebra, Algebraic Statistics and rigidity of ro
 
 
 <u>Email</u>: duarte AT mis DOT mpg DOT edu <br>
- <a href= "DuarteCV.pdf"> Resume(CV).
+ <a href= "DuarteCV2017.pdf"> Resume(CV).
 </a>
 </div>
 
