added paper links

--- a/research.html
+++ b/research.html
@@ -14,14 +14,15 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
 <div>
 <font size="4">
 <ul>
-         <li>E. Duarte. Implicitization of tensor product surfaces in the presence of a generic set
-of basepoints. Journal of Algebra and Its Applications (2016): 1750189.</li>
-         <li>E. Duarte, and D. Lichtblau. Polynomial GCDs by Syzygies. Symbolic and Numeric Algorithms for Scientific Computing (SYNASC), 2016 18th International Symposium on. IEEE, 2016.
-</li>
-         <li>E. Duarte and H. Schenck Tensor Product Surfaces and linear syzygies, Proceedings of the American Mathematical Society 144.1 (2016): 65-72.
-</li>
-         <li>E. Duarte and G. Francis Stability of quasicrystal frameworks in 2D and 3D, in Felix Escrig and Jose Sanches (eds), Proceedings of the First Conference Transformables, Seville, Spain, 2013.
-</li>
+         <li><a href="https://arxiv.org/abs/1610.03820">E. Duarte. Implicitization of tensor product surfaces in the presence of a generic set
+of basepoints. Journal of Algebra and Its Applications (2016): 1750189.</a></li>
+         <li><a href="http://ieeexplore.ieee.org/document/7829593/?part=1">E. Duarte, and D. Lichtblau. Polynomial GCDs by Syzygies. Symbolic and Numeric Algorithms for Scientific Computing (SYNASC), 2016 18th International Symposium on. IEEE, 2016.
+</a></li>
+         <li><a href="http://www.ams.org/journals/proc/2016-144-01/S0002-9939-2015-12703-7/S0002-9939-2015-12703-7.pdf">
+         E. Duarte and H. Schenck Tensor Product Surfaces and linear syzygies, Proceedings of the American Mathematical Society 144.1 (2016): 65-72.
+</a></li>
+         <li><a href="http://new.math.uiuc.edu/quasistable/DuarteFrancisSeville1may13.pdf">E. Duarte and G. Francis Stability of quasicrystal frameworks in 2D and 3D, in Felix Escrig and Jose Sanches (eds), Proceedings of the First Conference Transformables, Seville, Spain, 2013.
+</a></li>
       </ul>
 </font>
 </div>
