--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@ problems related to Commutative Algebra, Algebraic Statistics and rigidity of ro
 <b><a href= "https://github.com/emduart2"> My github profile </a> </b>
 </font>
 </div>
+ <hr size="4" noshade>
+  <div id = "menu" align = "middle" >
+ 
+<font size="6" color="navy">
+  <a href= "syzygies.html">Syzygies. </a></b> &nbsp &nbsp &nbsp
+</font>
+</div>
+
 
 
 
