--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -12,7 +12,10 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
 <hr size="4" noshade>
 <h2 align="center"> Miscellaneous </h2> 
 
-
+<font size="5">
+<a href="http://new.math.uiuc.edu/quasistable/"> Project on Stability of Quasicrystal Frameworks
+</a>
+</font>
 
 
 
