added M2Day1 file

--- a/syzygies.html
+++ b/syzygies.html
@@ -12,7 +12,7 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
 <hr size="4" noshade>
 
 <ul>
-         <li>Day 1></li>
+         <li>Day 1</li>         <a href="Day1.m2"> Macaulay 2 day 1 </a>
          <li>Day 2</li>
          <li>Day 3</li>
          <li>Day 4</li>
