cleaned Day1.m2 files

--- a/syzygies.html
+++ b/syzygies.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
-<title>Eliana M. Duarte </title>
+<title>Syzygies</title>
 </head>
 
 <body  text="#000000" link="#990000" vlink="#CC0099"
@@ -12,8 +12,11 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
 <hr size="4" noshade>
 
 <ul>
-         <li>Day 1: Chapter 1 Miller-Sturmfels, Hilbert functions, series <a href="Day1.m2"> Macaulay 2 day 1 </a> </li>         
-         <li>Day 2</li>
+         <li>Day 1: Chapter 1 Miller-Sturmfels. Definition of N graded and N^n graded modules.
+         We discussed Hilbert functions, series and polynomials. We went over the definition of the Stanley-Reisner
+         ideal of a simplicial complex and Hochster's formula on how to get the multigraded Betti numbers.
+         Some Macaulay2 code with examples <a href="Day1.m2"> M2 Day 1</a> </li>         
+         <li>Day 2: At MPI Leipzig, starting at 10:30 am. Chapter 2 Miller-Sturmfels.</li>
          <li>Day 3</li>
          <li>Day 4</li>
       </ul>
