--- a/syzygies.html
+++ b/syzygies.html
@@ -16,7 +16,8 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
          We discussed Hilbert functions, series and polynomials. We went over the definition of the Stanley-Reisner
          ideal of a simplicial complex and Hochster's formula on how to get the multigraded Betti numbers.
          Some Macaulay2 code with examples <a href="Day1.m2"> M2 Day 1</a> </li>         
-         <li>Day 2 23.10.2017: At MPI Leipzig, starting at 10 am. Chapter 2 Miller-Sturmfels.</li>
+         <li>Day 2 23.10.2017: At MPI Leipzig, starting at 10 am. Chapter 2 Miller-Sturmfels.
+         <a href="Day2.m2"> M2 Day 1</a> </li> </li>
          <li>Day 3</li>
          <li>Day 4</li>
       </ul>
