--- a/syzygies.html
+++ b/syzygies.html
@@ -17,7 +17,7 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
          ideal of a simplicial complex and Hochster's formula on how to get the multigraded Betti numbers.
          Some Macaulay2 code with examples <a href="Day1.m2"> M2 Day 1</a> </li>         
          <li>Day 2 23.10.2017: At MPI Leipzig, starting at 10 am. Chapter 2 Miller-Sturmfels.
-         <a href="Day2.m2"> M2 Day 2</a> </li> </li>
+         <a href="Day2last.m2"> M2 Day 2</a> </li> </li>
          <li>Day 3</li>
          <li>Day 4</li>
       </ul>
