--- a/syzygies.html
+++ b/syzygies.html
@@ -16,9 +16,17 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
          We discussed Hilbert functions, series and polynomials. We went over the definition of the Stanley-Reisner
          ideal of a simplicial complex and Hochster's formula on how to get the multigraded Betti numbers.
          Some Macaulay2 code with examples <a href="Day1.m2"> M2 Day 1</a> </li>         
-         <li>Day 2 23.10.2017: At MPI Leipzig, starting at 10 am. Chapter 2 Miller-Sturmfels.
-         <a href="Day2last.m2"> M2 Day 2</a> </li> </li>
-         <li>Day 3</li>
+         <li>Day 2 23.10.2017: At MPI Leipzig, starting at 10 am. Chapter 2 Miller-Sturmfels. Borel fixed ideals,
+         generic initial ideals. Eliahou-Kervaire resolution. Lex segment ideals
+         <a href="Day2last.m2"> M2 Day 2</a> </li> 
+         <li>Day 3 20.10.2017: At Magdeburg. Chapter 3 Miller-Sturmfels. Resolutions of monomial ideals in
+          2 and 3 variables. <a href="Day3.m2"> M2 Day 3</a>. References for cellular resolutions:</li>
+              <ul> <li> <a href="https://projecteuclid.org/download/pdf_1/euclid.jca/1269437255"> "The Eliahou-Kervaire resolution is celluar. " Jeffrey Mermin.</a></li> 
+                   <li> <a href="http://www.sciencedirect.com/science/article/pii/S0021869307005613"> "Minimal free resolutions that are not supported by a CW-complex "
+                    Mauricio Velasco.</a></li> 
+                   <li> <a href="http://www.mscand.dk/article/viewFile/14333/12330"> "Linear syzygies of Stanley-Reisner ideals "
+                    V. Reiner and V. Welker .</a></li> 
+              </ul>
          <li>Day 4</li>
       </ul>
 
