changed Day4 description

--- a/syzygies.html
+++ b/syzygies.html
@@ -27,7 +27,7 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
                    <li> <a href="http://www.mscand.dk/article/viewFile/14333/12330"> "Linear syzygies of Stanley-Reisner ideals "
                     V. Reiner and V. Welker .</a></li> 
               </ul>
-         <li>Day 4</li>
+         <li>Day 4 04.12.2017: At MPI. Chapter 4: Cellular resolutions. <a href="Day4.m2"> M2 Day 4</a></li>
       </ul>
 
 <hr size="4" noshade>
