webpage updated info

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
   <p align = "left" > <img src="elianaProfile.JPG" alt="Profile" align="right" style="width:304px;height:228px;"/> 
   <br>
 <br>
-  I am a postdoctoral reasearcher at Max Planck Institute for Mathematics in the Sciences in Leipzig,
-    Germany. In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
+  I am a postdoctoral reasearcher at Otto-von-Guericke Universit&auml;t Magdeburg. Previously
+  I worked in the Nonlinear algebra group at Max Planck Institute for Mathematics in the 
+  Sciences  in Leipzig. In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
 <a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>. I like to work on
 problems related to Commutative Algebra, Algebraic Statistics and rigidity of rod and pinion
 2D and 3D frameworks. 
