--- a/research.html
+++ b/research.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html> <head>
+<html> <head> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Eliana M. Duarte </title>
 </head>
 
@@ -32,10 +32,11 @@ of basepoints. Journal of Algebra and Its Applications (2016): 1750189.</a></li>
 <div>
 <font size="4">
 <ul>
-         <li><a href="https://www.mis.mpg.de/calendar/conferences/2018/macaulay.html"> Macaulay 2 Workshop </a> </li>
+         <li><a href="https://icerm.brown.edu/programs/sp-f18/#tab_participants"> ICERM Semester program on Nonlinear algebra .</a> ICERM. Fall, 2018.</li>
+         <li><i class="fa fa-heart"></i><a href="https://www.mis.mpg.de/calendar/conferences/2018/macaulay.html"> Macaulay 2 Workshop .</a> MPI Leipzig. June 04-08, 2018.</li>
          <li><a href="https://www.math-conf.uni-osnabrueck.de/algebraic-methods-in-statistics/"> Algebraic 
-         methods in statistics. Universitat Osnabruck. </a></li>
-         <li><a href="https://www.mimuw.edu.pl/~marysia/Lukecin17.html"> Binomial Ideals. Lukecin, Poland.</a> </li>
+         methods in statistics. </a> Universitat Osnabruck. December 01,2017.</li>
+         <li><a href="https://www.mimuw.edu.pl/~marysia/Lukecin17.html"> Binomial Ideals. </a> Lukecin, Poland. September 04-09,2017. </li>
          <li><a href="https://www.siam.org/meetings/ag17/"> SIAM conference on Applied Algebraic Geometry </a></li>
          <li><a href="https://www.mis.mpg.de/calendar/conferences/2017/rag.html"> Reading group on Real Algebraic Geometry</a> </li>
       </ul>
