updates reading group

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html> <head>
+<html> <head> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Eliana M. Duarte </title>
 </head>
 
@@ -35,6 +35,8 @@ problems related to Commutative Algebra, Algebraic Statistics and rigidity of ro
 </div>
 
 <br>
+<i class="fa fa-heart"></i><a href="https://www.mis.mpg.de/calendar/conferences/2018/macaulay.html"> Macaulay 2 Workshop .</a> <i class="fa fa-heart"></i>
+MPI Leipzig. June 04-08, 2018.
 <br>
 <br>
 
