--- a/syzygies.html
+++ b/syzygies.html
@@ -28,6 +28,11 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
                     V. Reiner and V. Welker .</a></li> 
               </ul>
          <li>Day 4 04.12.2017: At MPI. Chapter 4: Cellular resolutions. <a href="Day4.m2"> M2 Day 4</a></li>
+            Definition of cellular resolution, examples of celullar resolutions and the Hull resolution.
+            
+        <li>Day 5 14.01.2018: At Magdeburg. Chapter 2 Einsenbud, Geometry of syzygies: 
+             Sections 2B, 2C <a href="Day5.m2"> M2 Day 5</a></li>
+            Proof of Hilbert's Syzygy Theorem and examples of the geometry of seven points in projective 3 space.
       </ul>
 
 <hr size="4" noshade>
