--- a/research.html
+++ b/research.html
@@ -33,7 +33,7 @@ of basepoints. Journal of Algebra and Its Applications (2016): 1750189.</a></li>
 <font size="4">
 <ul>
          <li><a href="https://icerm.brown.edu/programs/sp-f18/#tab_participants"> ICERM Semester program on Nonlinear algebra .</a> ICERM. Fall, 2018.</li>
-         <li><i class="fa fa-heart"></i><a href="https://www.mis.mpg.de/calendar/conferences/2018/macaulay.html"> Macaulay 2 Workshop .</a> MPI Leipzig. June 04-08, 2018.</li>
+         <li><i class="fa fa-heart"></i><a href="https://www.mis.mpg.de/calendar/conferences/2018/macaulay.html"> Macaulay 2 Workshop .</a> <i class="fa fa-heart"></i>MPI Leipzig. June 04-08, 2018.</li>
          <li><a href="https://www.math-conf.uni-osnabrueck.de/algebraic-methods-in-statistics/"> Algebraic 
          methods in statistics. </a> Universitat Osnabruck. December 01,2017.</li>
          <li><a href="https://www.mimuw.edu.pl/~marysia/Lukecin17.html"> Binomial Ideals. </a> Lukecin, Poland. September 04-09,2017. </li>
