added seminar information

--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@ MPI Leipzig. June 04-08, 2018.
   <div id = "menu" align = "middle" >
  
 <font size="6" color="navy">
-  <a href= "syzygies.html">Syzygies. </a></b> &nbsp &nbsp &nbsp
+ <b> <a href= "syzygies.html">Syzygies. </a></b> &nbsp &nbsp &nbsp
+ <b> <a href= "seminareiag.html">Seminare IAG. </a></b> &nbsp &nbsp &nbsp
 </font>
+
 </div>
 
 
