added seminar info

--- a/seminareiag.html
+++ b/seminareiag.html
@@ -29,11 +29,11 @@ in den Besprechungsraum des IAG ein (G03-223). <a href="http://www.math.ovgu.de/
 <hr size="4" noshade>
 <ul style="list-style-type:none">
 
-<li>  Session 1 :UAG Chapter 1, section 1, section 2 . Polynomials in several variables, ideals. Monomial Orders and polynomial division.</li>
+<li>  Session 1 :(Eliana) UAG Chapter 1, section 1, section 2 . Polynomials in several variables, ideals. Monomial Orders and polynomial division.</li>
 <br>
 <li>Session 2: UAG Chapter 1, section 2, section 3 . Definition and properties of Grobner bases, Buchberger's criterion.</li>
 <br>
-<li>Session 3: UAG Chapter 1, section 4. Geometry of solutions of systems of polynomial equations. Points, curves and general affine varieties.</li>
+<li>Session 3: (Eliana)UAG Chapter 1, section 4. Geometry of solutions of systems of polynomial equations. Points, curves and general affine varieties.</li>
 <br>
 <li>Session 4: UAG Chapter 2, section 1. Solving systems of equations using elimination theory. </li>
 <br>
@@ -44,7 +44,10 @@ Section 4 focuses on using eigenvalues to solve systems of equations whose solut
 <br>
 <li>Session 7 :UAG Chapter 3, section 1. The resultant of two polynomials in two variables, examples, properties and how to compute them.</li>
 <br>
-<li>Session 8 : UAG Chapter 3, section 2. Multipolynomial resultants for polynomials in several variables.</li>
+<li>Session 8 :(Eliana) UAG Chapter 3, section 2. Multipolynomial resultants for polynomials in several variables.</li>
+<br>
+<li> Short Presentation sessions: Each student gives a 15 min short presentation of a computation done with tools learned in the seminar. The computation should be from
+a different section than what the student's longer talk was on. </li>
 <br>
 <li>Session 9: UAG Chapter 3. section 3. Properties of resultants.</li>
 <br>
