--- a/seminareiag.html
+++ b/seminareiag.html
@@ -46,8 +46,9 @@ Section 4 focuses on using eigenvalues to solve systems of equations whose solut
 <br>
 <li>Session 8 :(Eliana) UAG Chapter 3, section 2. Multipolynomial resultants for polynomials in several variables.</li>
 <br>
-<li> Short Presentation sessions: Each student gives a 15 min short presentation of a computation done with tools learned in the seminar. The computation should be from
-a different section than what the student's longer talk was on. </li>
+<li> Short Presentation sessions: Each student gives a 15 min short presentation of a computation done with tools learned in the seminar. The goal of this short presentations 
+is that you compute a concrete example using tools we have learned and explain it to the rest of the seminar. 
+This is meant as a review. I would suggest you do a computation from one of the topics in the session that you didn't present. I'll also present a computation. </li>
 <br>
 <li>Session 9: UAG Chapter 3. section 3. Properties of resultants.</li>
 <br>
