--- a/research.html
+++ b/research.html
@@ -10,6 +10,13 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
  </h1>
 </font>
 <hr size="4" noshade>
+<h2 align="center"> Preprints</h2>
+<font size="4">
+<ul>
+    <li> <a href="https://arxiv.org/pdf/1802.04511.pdf"> Equations defining probability tree models.</a> Joint with <a href="https://sites.google.com/view/goergen">Christiane Goergen</a></li>
+</ul> 
+
+<hr size="4" noshade>
 <h2 align="center"> Publications </h2> 
 <div>
 <font size="4">
@@ -28,7 +35,7 @@ of basepoints. Journal of Algebra and Its Applications (2016): 1750189.</a></li>
 </div>
 
 <hr size="4" noshade>
-<h2 align="center"> Conferences </h2> 
+<h2 align="center"> Activities </h2> 
 <div>
 <font size="4">
 <ul>
