--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <title>Eliana M. Duarte </title>
 </head>
 
-<body  text="#000000" link="#990000" vlink="#CC0099"
+<body  text="#000000" link="#008080" vlink="#3B5998"
 alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
 <font size="5" color="maroon">
+<img src="magdeburg.jpg" alt="Hauptbahnof" height="300" width="1320">
 <h1 align="center"><a href="index.html" >Eliana M. Duarte</a>
  </h1>
 </font>
@@ -29,7 +30,7 @@ problems related to Commutative Algebra, Algebraic Statistics and rigidity of ro
 </font>
 
 
-<u>Email</u>: duarte AT mis DOT mpg DOT edu <br>
+<u>Email</u>: eliana DOT duarte AT ovgu DOT de <br>
  <a href= "DuarteCV2017.pdf"> Resume(CV).
 </a>
 </div>
@@ -49,7 +50,7 @@ MPI Leipzig. June 04-08, 2018.
   <a href= "research.html">Research. </a></b> &nbsp &nbsp &nbsp
 <b><a href= "teaching.html">Teaching. </a> </b> &nbsp &nbsp &nbsp
 <b><a href= "miscellaneous.html">Miscellaneous. </a> </b>&nbsp &nbsp &nbsp
-<b><a href= "https://github.com/emduart2"> My github profile </a> </b>
+<b><a href= "https://github.com/emduart2"> Github profile. </a> </b>
 </font>
 </div>
  <hr size="4" noshade>
