--- a/syzygies.html
+++ b/syzygies.html
@@ -3,7 +3,7 @@
 <title>Syzygies</title>
 </head>
 
-<body  text="#000000" link="#990000" vlink="#CC0099"
+<body  text="#000000" link="#008080" vlink="#3B5998"
 alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
 <font size="5" color="maroon">
 <h1 align="center"><a href="index.html" >Syzygies</a>
