added seminar changes

--- a/seminareiag.html
+++ b/seminareiag.html
@@ -29,24 +29,24 @@ in den Besprechungsraum des IAG ein (G03-223). <a href="http://www.math.ovgu.de/
 <hr size="4" noshade>
 <ul style="list-style-type:none">
 
-<li>  Session 1 :(Eliana) UAG Chapter 1, section 1, section 2 . Polynomials in several variables, ideals. Monomial Orders and polynomial division.</li>
+<li>  Session 1 : 04.04.2018.(Eliana) UAG Chapter 1, section 1, section 2 . Polynomials in several variables, ideals. Monomial Orders and polynomial division.</li>
 <br>
-<li>Session 2: UAG Chapter 1, section 2, section 3 . Definition and properties of Grobner bases, Buchberger's criterion.</li>
+<li>Session 2: 18.04.2018. UAG Chapter 1, section 2, section 3 . Definition and properties of Grobner bases, Buchberger's criterion.</li>
 <br>
-<li>Session 3: (Eliana)UAG Chapter 1, section 4. Geometry of solutions of systems of polynomial equations. Points, curves and general affine varieties.</li>
+<li>Session 3: 02.05.2018.(Eliana)UAG Chapter 1, section 4. Geometry of solutions of systems of polynomial equations. Points, curves and general affine varieties.</li>
 <br>
-<li>Session 4: UAG Chapter 2, section 1. Solving systems of equations using elimination theory. </li>
+<li>Session 4: 16.05.2018.UAG Chapter 2, section 1. Solving systems of equations using elimination theory. </li>
 <br>
-<li>Session 5:UAG Chapter 2, section 2. Systems of equations that have finitely many solutions and their algebraic properties. </li>
+<li>Session 5: 30.05.2018.UAG Chapter 2, section 2. Systems of equations that have finitely many solutions and their algebraic properties. </li>
 <br>
-<li>Session 6: UAG Chapter 2, section 3 or section 4. Depending on the interest of the participants we chose one section. Section 3 focuses on improvements to compute Grobner bases and
+<li>Session 6: 13.06.2018. UAG Chapter 2, section 3 or section 4. Depending on the interest of the participants we chose one section. Section 3 focuses on improvements to compute Grobner bases and
 Section 4 focuses on using eigenvalues to solve systems of equations whose solutions are finite set of points.</li>
 <br>
-<li>Session 7 :UAG Chapter 3, section 1. The resultant of two polynomials in two variables, examples, properties and how to compute them.</li>
+<li>Session 7 : 27.06.2018.UAG Chapter 3, section 1. The resultant of two polynomials in two variables, examples, properties and how to compute them.</li>
 <br>
-<li>Session 8 :(Eliana) UAG Chapter 3, section 2. Multipolynomial resultants for polynomials in several variables.</li>
+<li>Session 8 : 04.06.2018. (Eliana) UAG Chapter 3, section 2. Multipolynomial resultants for polynomials in several variables.</li>
 <br>
-<li> Short Presentation sessions: Each student gives a 15 min short presentation of a computation done with tools learned in the seminar. The goal of this short presentations 
+<li> Short Presentation sessions: 25.07.2018. Each student gives a 15 min short presentation of a computation done with tools learned in the seminar. The goal of this short presentations 
 is that you compute a concrete example using tools we have learned and explain it to the rest of the seminar. 
 This is meant as a review. I would suggest you do a computation from one of the topics in the session that you didn't present. I'll also present a computation. </li>
 <br>
