changes to schedule

--- a/seminareiag.html
+++ b/seminareiag.html
@@ -21,6 +21,7 @@ We will discuss theorems and implementations of these tools in a computer algebr
 <hr size="4" noshade>
 
 <ul>
+         <li> This seminar meets in G05-122 from 11:00 to 13:00 on the dates listed below.</li>
          <li>  Vorbesprechung am Freitag, 26. Januar 2018 um 10:00 Uhr
 in den Besprechungsraum des IAG ein (G03-223). <a href="http://www.math.ovgu.de/Studium/Studierendenbüro+_+Prüfungsamt/Seminare+Sommer+2018/Seminare_IAG-p-5068.html">
          Vorbesprechung Proseminar und Seminar</a></li>
@@ -29,36 +30,30 @@ in den Besprechungsraum des IAG ein (G03-223). <a href="http://www.math.ovgu.de/
 <hr size="4" noshade>
 <ul style="list-style-type:none">
 
-<li>  Session 1 : 04.04.2018.(Eliana) UAG Chapter 1, section 1, section 2 . Polynomials in several variables, ideals. Monomial Orders and polynomial division.</li>
+<li> The meeting on 04.04.2018 is cancelled. Instead of having three introductory 50 min session we will have two 75 min introductory sessions. </li>
 <br>
-<li>Session 2: 18.04.2018. UAG Chapter 1, section 2, section 3 . Definition and properties of Grobner bases, Buchberger's criterion.</li>
+<li>Session 1 and 2: 18.04.2018. (Eliana) UAG Chapter 1: section 1, section 2, section 3 . Polynomials in several variables, ideals. Monomial Orders and polynomial division. Definition and properties of Grobner bases, Buchberger's criterion.</li>
 <br>
-<li>Session 3: 02.05.2018.(Eliana)UAG Chapter 1, section 4. Geometry of solutions of systems of polynomial equations. Points, curves and general affine varieties.</li>
+<li>Session 2 and 3 : 02.05.2018.(Eliana)UAG Chapter 1: section 3 and section 4. Geometry of solutions of systems of polynomial equations. Points, curves and general affine varieties.</li>
 <br>
-<li>Session 4: 16.05.2018.UAG Chapter 2, section 1. Solving systems of equations using elimination theory. </li>
+<li>Session 4: 09.05.2018.(Anna)UAG Chapter 2, section 1. Solving systems of equations using elimination theory. </li>
 <br>
-<li>Session 5: 30.05.2018.UAG Chapter 2, section 2. Systems of equations that have finitely many solutions and their algebraic properties. </li>
-<br>
-<li>Session 6: 13.06.2018. UAG Chapter 2, section 3 or section 4. Depending on the interest of the participants we chose one section. Section 3 focuses on improvements to compute Grobner bases and
+<li>Session 5 and 6: 16.05.2018. (Eliana)UAG Chapter 2, section 2. Systems of equations that have finitely many solutions and their algebraic properties.  Depending on the interest of the participants we chose one section. Section 3 focuses on improvements to compute Grobner bases and
 Section 4 focuses on using eigenvalues to solve systems of equations whose solutions are finite set of points.</li>
 <br>
-<li>Session 7 : 27.06.2018.UAG Chapter 3, section 1. The resultant of two polynomials in two variables, examples, properties and how to compute them.</li>
+<li>Session 7 : 30.05.2018.(Christoph) UAG Chapter 3, section 1. The resultant of two polynomials in two variables, examples, properties and how to compute them.</li>
 <br>
-<li>Session 8 : 04.06.2018. (Eliana) UAG Chapter 3, section 2. Multipolynomial resultants for polynomials in several variables.</li>
+<li>Session 8 : 13.06.2018. (Eliana) UAG Chapter 3, section 2. Multipolynomial resultants for polynomials in several variables.</li>
 <br>
-<li> Short Presentation sessions: 25.07.2018. Each student gives a 15 min short presentation of a computation done with tools learned in the seminar. The goal of this short presentations 
+<li> Session 9: 20.06.2018.(short presentations) Each student gives a 15 min short presentation of a computation done with tools learned in the seminar. The goal of this short presentations 
 is that you compute a concrete example using tools we have learned and explain it to the rest of the seminar. 
 This is meant as a review. I would suggest you do a computation from one of the topics in the session that you didn't present. I'll also present a computation. </li>
 <br>
-<li>Session 9: UAG Chapter 3. section 3. Properties of resultants.</li>
+<li>Session 10: 27.06.2018. (Eliana) UAG Chapter 3. section 3. Properties of resultants.</li>
 <br>
-<li>Session 10 :UAG Chapter 3. section 4. Computing resultants.</li>
+<li>Session 11: 04.07.2018. (Sebastian)UAG Chapter 3. section 5. Solving systems of equations using resultants. </li>
 <br>
-<li>Session 11: UAG Chapter 3. section 5. Solving systems of equations using resultants. </li>
-<br>
-<li>Session 12: UAG Chapter 7. section 2. Sparse resultants </li>
-<br>
-<li>Session 13 : Save a slot in case we take longer time covering some of the material</li>
+
 <br>
 </ul>  
 
