--- a/seminareiag.html
+++ b/seminareiag.html
@@ -25,6 +25,8 @@ We will discuss theorems and implementations of these tools in a computer algebr
          <li>  Vorbesprechung am Freitag, 26. Januar 2018 um 10:00 Uhr
 in den Besprechungsraum des IAG ein (G03-223). <a href="http://www.math.ovgu.de/Studium/Studierendenbüro+_+Prüfungsamt/Seminare+Sommer+2018/Seminare_IAG-p-5068.html">
          Vorbesprechung Proseminar und Seminar</a></li>
+         <li> Links to get started with Macaulay 2. <a href="http://www2.macaulay2.com/Macaulay2/" >Install</a>. 
+         <a href="http://habanero.math.cornell.edu:3690">Tutorials </a></li>
       </ul>
 
 <hr size="4" noshade>
@@ -32,7 +34,9 @@ in den Besprechungsraum des IAG ein (G03-223). <a href="http://www.math.ovgu.de/
 
 <li> The meeting on 04.04.2018 is cancelled. Instead of having three introductory 50 min session we will have two 75 min introductory sessions. </li>
 <br>
-<li>Session 1 and 2: 11.04.2018. (Eliana) UAG Chapter 1: section 1, section 2, section 3 . Polynomials in several variables, ideals. Monomial Orders and polynomial division. Definition and properties of Grobner bases, Buchberger's criterion.</li>
+<li>Session 1 and 2: 11.04.2018. (Eliana) UAG Chapter 1: section 1, section 2, section 3 . Polynomials in several variables, ideals. Monomial Orders and polynomial division. 
+Definition and properties of Grobner bases, Buchberger's criterion.<br>
+<a href = "session1and2-11-04-2018.m2">Macaulay 2 code for this session.</a></li>
 <br>
 <li>Session 2 and 3 : 18.05.2018.(Eliana)UAG Chapter 1: section 3 and section 4. Geometry of solutions of systems of polynomial equations. Points, curves and general affine varieties.</li>
 <br>
