--- a/seminareiag.html
+++ b/seminareiag.html
@@ -61,7 +61,14 @@ This is meant as a review. I would suggest you do a computation from one of the 
 <br>
 </ul>  
 
-
-
+<hr size="4" noshade>
+<h2> Notes</h2>
+<ul style="list-style-type:none">
+<li>  <a href="NotesSeminare/session1.pdf"> Session 1</a></li>
+<li>  <a href="NotesSeminare/session2.pdf"> Session 2</a></li>
+<li>  <a href="NotesSeminare/session5.pdf"> Session 5</a></li>
+<li>  <a href="NotesSeminare/session8.pdf"> Session 8</a></li>
+<li>  <a href=""> Session 7</a></li>
+</ul> 
 
 </body> </html>
