--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <title>Eliana M. Duarte </title>
 </head>
 
 <body  text="#000000" link="#008080" vlink="#3B5998"
 alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
 <font size="5" color="maroon">
-<img src="magdeburg.jpg" alt="Hauptbahnof" height="300" width="1320">
+ 
+   <img src="magdeburg.jpg" alt="Hauptbahnof" height="300" width="800">
 <h1 align="center"><a href="index.html" >Eliana M. Duarte</a>
  </h1>
 </font>
@@ -36,8 +38,9 @@ problems related to Commutative Algebra, Algebraic Statistics and rigidity of ro
 </div>
 
 <br>
-<i class="fa fa-heart"></i><a href="https://www.mis.mpg.de/calendar/conferences/2018/macaulay.html"> Macaulay 2 Workshop .</a> <i class="fa fa-heart"></i>
-MPI Leipzig. June 04-08, 2018.
+<i class="fa fa-heart"></i><a href="https://www.math.ovgu.de/AlgStat-p-5190.html"> Complexity Reduction in
+Algebraic Statistics .</a> <i class="fa fa-heart"></i>
+Magdeburg. November 26-27, 2018.
 <br>
 <br>
 
@@ -46,20 +49,20 @@ MPI Leipzig. June 04-08, 2018.
   <div id = "menu" align = "middle" >
   <hr size="4" noshade>
 <font size="6" color="navy">
- &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp <b>
-  <a href= "research.html">Research. </a></b> &nbsp &nbsp &nbsp
-<b><a href= "teaching.html">Teaching. </a> </b> &nbsp &nbsp &nbsp
-<b><a href= "miscellaneous.html">Miscellaneous. </a> </b>&nbsp &nbsp &nbsp
-<b><a href= "https://github.com/emduart2"> Github profile. </a> </b>
+ &nbsp     <b>
+  <a href= "research.html">Research. </a></b> &nbsp &nbsp 
+<b><a href= "teaching.html">Teaching. </a> </b> &nbsp &nbsp 
+<b><a href= "https://github.com/emduart2"> Github profile. </a> &nbsp &nbsp </b>
+<b><a href= "miscellaneous.html">Miscellaneous. </a> </b>&nbsp &nbsp 
 </font>
 </div>
  <hr size="4" noshade>
   <div id = "menu" align = "middle" >
- 
+<!--
 <font size="6" color="navy">
  <b> <a href= "syzygies.html">Syzygies. </a></b> &nbsp &nbsp &nbsp
  <b> <a href= "seminareiag.html">Seminare IAG. </a></b> &nbsp &nbsp &nbsp
-</font>
+</font>-->
 
 </div>
 
