--- a/seminareiag.html
+++ b/seminareiag.html
@@ -71,4 +71,24 @@ This is meant as a review. I would suggest you do a computation from one of the 
 <li>  <a href=""> Session 7</a></li>
 </ul> 
 
+
+  <div id = "menu" align = "middle" >
+  <hr size="4" noshade>
+<font size="6" color="navy">
+ &nbsp     <b>
+  <a href= "research.html">Research. </a></b> &nbsp &nbsp 
+<b><a href= "teaching.html">Teaching. </a> </b> &nbsp &nbsp 
+<b><a href= "https://github.com/emduart2"> Github profile. </a> &nbsp &nbsp </b>
+<b><a href= "miscellaneous.html">Miscellaneous. </a> </b>&nbsp &nbsp 
+</font>
+</div>
+ <hr size="4" noshade>
+  <div id = "menu" align = "middle" >
+<!--
+<font size="6" color="navy">
+ <b> <a href= "syzygies.html">Syzygies. </a></b> &nbsp &nbsp &nbsp
+ <b> <a href= "seminareiag.html">Seminare IAG. </a></b> &nbsp &nbsp &nbsp
+</font>-->
+
+</div>
 </body> </html>
