--- a/research.html
+++ b/research.html
@@ -55,16 +55,26 @@ of basepoints. Journal of Algebra and Its Applications (2016): 1750189.</a></li>
 
 
 
+
+
   <div id = "menu" align = "middle" >
   <hr size="4" noshade>
 <font size="6" color="navy">
- &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp <b>
-  <a href= "research.html">Research. </a></b> &nbsp &nbsp &nbsp
-<b><a href= "teaching.html">Teaching. </a> </b> &nbsp &nbsp &nbsp
-<b><a href= "miscellaneous.html">Miscellaneous. </a> </b>&nbsp &nbsp &nbsp
-<b><a href= "https://github.com/emduart2"> My github profile </a> </b>
+ &nbsp     <b>
+  <a href= "research.html">Research. </a></b> &nbsp &nbsp 
+<b><a href= "teaching.html">Teaching. </a> </b> &nbsp &nbsp 
+<b><a href= "https://github.com/emduart2"> Github profile. </a> &nbsp &nbsp </b>
+<b><a href= "miscellaneous.html">Miscellaneous. </a> </b>&nbsp &nbsp 
 </font>
 </div>
-<hr size="4" noshade>
+ <hr size="4" noshade>
+  <div id = "menu" align = "middle" >
+<!--
+<font size="6" color="navy">
+ <b> <a href= "syzygies.html">Syzygies. </a></b> &nbsp &nbsp &nbsp
+ <b> <a href= "seminareiag.html">Seminare IAG. </a></b> &nbsp &nbsp &nbsp
+</font>-->
+
+</div>
 
 </body> </html>
