--- a/teaching.html
+++ b/teaching.html
@@ -13,7 +13,14 @@ alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
 <font size="4">
 <div>
 <h2 align="center"> Teaching </h2>
-During my graduate studies at University of Illinois Urbana - Champaign I was a
+<ul>
+<li>For the 2018 Summer Semester I was in charge of the masters seminar in Algebra and Geometry
+at OVGU Magdeburg.
+<a href= "seminareiag.html">Seminare IAG. </a></li>
+<li>From November 2017 to January 2018 I co-organized a joint reading group on syzygies with
+OVGU Magdeburg and MPI Leipzig. <a href= "syzygies.html">Syzygies. </a></li>
+
+<li> During my graduate studies at University of Illinois Urbana - Champaign I was a
 teaching assistant for the following classes: 
 <ul>
          <li>Theory of arithmetic for elementary school teachers</li>
@@ -24,23 +31,33 @@ teaching assistant for the following classes:
          <li> Calculus in several variables
 </li>
       </ul>
-
+</li>
 </div>
 </font>
+</ul>
 
 
 
+ 
 
   <div id = "menu" align = "middle" >
   <hr size="4" noshade>
 <font size="6" color="navy">
- &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp <b>
-  <a href= "research.html">Research. </a></b> &nbsp &nbsp &nbsp
-<b><a href= "teaching.html">Teaching. </a> </b> &nbsp &nbsp &nbsp
-<b><a href= "miscellaneous.html">Miscellaneous. </a> </b>&nbsp &nbsp &nbsp
-<b><a href= "https://github.com/emduart2"> My github profile </a> </b>
+ &nbsp     <b>
+  <a href= "research.html">Research. </a></b> &nbsp &nbsp 
+<b><a href= "teaching.html">Teaching. </a> </b> &nbsp &nbsp 
+<b><a href= "https://github.com/emduart2"> Github profile. </a> &nbsp &nbsp </b>
+<b><a href= "miscellaneous.html">Miscellaneous. </a> </b>&nbsp &nbsp 
 </font>
 </div>
-<hr size="4" noshade>
+ <hr size="4" noshade>
+  <div id = "menu" align = "middle" >
+<!--
+<font size="6" color="navy">
+ <b> <a href= "syzygies.html">Syzygies. </a></b> &nbsp &nbsp &nbsp
+ <b> <a href= "seminareiag.html">Seminare IAG. </a></b> &nbsp &nbsp &nbsp
+</font>-->
+
+</div>
 
 </body> </html>
