changing the layout

--- a/index.html
+++ b/index.html
@@ -1,3 +1,35 @@
+
+
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Hank Quinlan, Horrible Cop</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Hank Quinlan!</h1>
+				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
+
+<!-- 
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -62,7 +94,7 @@ Magdeburg. November 26-27, 2018.
 <font size="6" color="navy">
  <b> <a href= "syzygies.html">Syzygies. </a></b> &nbsp &nbsp &nbsp
  <b> <a href= "seminareiag.html">Seminare IAG. </a></b> &nbsp &nbsp &nbsp
-</font>-->
+</font>
 
 </div>
 
@@ -73,3 +105,4 @@ Magdeburg. November 26-27, 2018.
 <hr size="4" noshade>
 
 </body> </html>
+-->
