changes to index

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Eliana Duarte, PhD in Mathematics
 ---
 <div class="blurb">
-	<h1>Hi there I am Eliana Duarte </h1>
+	<h1>Hi there, I'm Eliana!</h1>
 	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
 
